--- a/BookLibrery/Index.html
+++ b/BookLibrery/Index.html
@@ -65,24 +65,35 @@
         </section>
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="img/Nuestras_novedades.png" class="d-block " alt="Isabel Allende-Mujeres del alma mia">
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block " alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block " alt="...">
-              </div>
+                <div class="carousel-item active">
+                    <img src="img/novedades_septiembre.png" class="d-block w-60" alt="Novedades Septiembre">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/novedades_2024.gif" class="d-block w-60" alt="Novedades 2024">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/isabel_allende.png" class="d-block w-60" alt="mujeres del alma mia - isabel allende">
+                </div>
             </div>
         </div>
+        
+
     </main>
     <footer class="footer">
         <p>&copy; 2024 BookStore</p>
         
 
     </footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script>
+        // Inicializa el carrusel con autoplay
+        $(document).ready(function() {
+            $('#carouselExampleSlidesOnly').carousel({
+                interval: 5000, // Cambia el número para controlar el intervalo de cambio de imagen
+                pause: true // Activa o desactiva la pausa al pasar el mouse sobre el carrusel
+            });
+        });
+    </script>
 </body>
 </html>
