--- a/BookLibrery/index2.html
+++ b/BookLibrery/index2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -66,9 +66,86 @@
                     </div>
                 </div>
             </div>
-            <!-- Add more books here -->
+            Add more books here 
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+</body>
+</html>-->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Tienda Bookstore</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Tienda Bookstore</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Libros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contacto</a>
+          </li>
+        </ul>
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+        </form>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Carrito</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Iniciar sesión</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Registrarse</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <h3>Categorías</h3>
+          <ul class="list-unstyled">
+            <li><a href="#">Ficción</a></li>
+            <li><a href="#">No ficción</a></li>
+            <li><a href="#">Infantil</a></li>
+            <li><a href="#">Ciencia ficción</a></li>
+            <li><a href="#">Fantasía</a></li>
+          </ul>
+        </div>
+        <div class="col-md-9">
+          <h1>Nuestros libros más populares</h1>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card mb-4">
+                <img src="libro1.jpg" class="card-img-top" alt="Libro 1">
+                <div class="card-body">
+                  <h5 class="card-title">Libro 1</h5>
+                  <p class="card-text">$20.00</p>
+                  <button class="btn btn-primary" onclick="agregarAlCarrito(1)">Agregar al carrito</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card mb-4">
+                <img src="libro2.jpg" class="card-img-top" alt="Libro 2">
+                
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
