--- a/BookLibrery/libros.html
+++ b/BookLibrery/libros.html
@@ -6,6 +6,8 @@
     <title>Tienda de Libros</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
 </head>
 <body>
     <header>
@@ -68,27 +70,48 @@
                     <h2>Alas de Sangre</h2>
                     <h3>Rebecca Yarros</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="rating">
+                        <span class="stars">4.5/5</span>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-alt"></i>
+                        <i class="far fa-star"></i>
+                    </div>
                 </div>
                 <div class="col-md-4">
                     <img src="img/alas_de_hierro.jpg" alt="Alas de Hierro" class="img-fluid">
                     <h2>Alas de Hierro</h2>
                     <h3>Rebecca Yarros</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="rating">
+                        <span class="stars">3.0/5</span>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
+                    </div>
                 </div>
                 <div class="col-md-4">
                     <img src="img/holly.jpg" alt="Holly" class="img-fluid">
                     <h2>Hollly</h2>
                     <h3>Stephen King</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Lorem ipsum dolor sit amt, consectetur adipiscing elit.</p>
+                    <div class="rating">
+                        <span class="stars">4.8/5</span>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
+                    </div>
                 </div>
                 <div class="col-md-4">
                     <img src="img/jaque_mate.jpg" alt="Jaque mate del amor" class="img-fluid">
                     <h2>Jaque mate del amor</h2>
                     <h3>Ali Hazelwood</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="rating">
+                        <span class="stars">4.1/5</span>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
+                    </div>
                 </div>
             </div>
         </section>
+        
 
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
@@ -108,12 +131,36 @@
             </ul>
           </nav>
     </main>
+
     <footer class="footer">
         <p>&copy; 2024 BookStore</p>
         
 
     </footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script>
+        const stars = document.querySelectorAll(".stars i");
+
+        stars.forEach((star, index) => {
+            star.addEventListener("click", () => {
+                stars.forEach((star, index2) => {
+                    index >= index2 ? star.classList.add("active") : star.classList.remove("active");
+                });
+            });
+        });
+
+    </script>
 </body>
 </html>
+
+
+const stars = document.querySelectorAll(".stars i");
+
+stars.forEach((star, index) => {
+    star.addEventListener("click", () => {
+        stars.forEach((star, index2) => {
+            index >= index2 ? star.classList.add("active") : star.classList.remove("active");
+        });
+    });
+});
