Info-books-dinamic_Shoop update

--- a/Front-HTML/Index.html
+++ b/Front-HTML/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda de Libros</title>    
+    <title>Tienda de Libros</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -70,7 +70,7 @@
         <!--Contenedor de libros-->
         <div class="book-container">
             <div class="book" data-title="THE DEMON OF UNREST" data-author="Erik Larson">
-                <a href="libros.html">
+                <a href="book-details.html?isbn=9780593239473">
                     <img src="img/the-demon-of-unrest-erik-larson.jpg" alt="The demon of unrest by Erik Larson">
                 </a>
                 <h3>THE DEMON OF UNREST</h3>
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="book" data-title="HEARTLESS HUNTER" data-author="Kristen Ciccarelli">
-                <a href="libros.html">
+                <a href="book-details.html?isbn=9780063058501">
                     <img src="img/heartless-hunter-kristen-ciccarelli.jpg" alt="Heartless Hunter by Kristen Ciccarelli">
                 </a>
                 <h3>HEARTLESS HUNTER</h3>
@@ -98,8 +98,8 @@
                 </div>
             </div>
             <div class="book" data-title="House of Flame and Shadow" data-author="Sarah J. Maas">
-                <a href="libros.html">
-                    <img src="img/house-of-flame-and-shadow-sarah-j-maas.jpg" alt="House of Flame and Shadow by Sarah J. Maas">                
+                <a href="book-details.html?isbn=9781635574091">
+                    <img src="img/house-of-flame-and-shadow-sarah-j-maas.jpg" alt="House of Flame and Shadow by Sarah J. Maas">
                 </a>
                 <h3>HOUSE OF FLAME AND SHADOW</h3>
                 <p>Sarah J. Maas</p>
@@ -151,8 +151,8 @@
                         <p>&copy; 2024 BookStore</p>
                     </div>
                 </div>
-            </div>      
-        </div>  
+            </div>
+        </div>
     </footer>
     <div class="back-to-top" id="back-to-top">
         <i class="fas fa-arrow-up"></i>
@@ -162,5 +162,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/books.js"></script>
 </body>
 </html>
