--- a/Front-HTML/book-details.html
+++ b/Front-HTML/book-details.html
@@ -10,83 +10,13 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Goblin+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Gilda+Display&family=Glegoo:wght@400;700&family=Gowun+Dodum&family=Graduate&display=swap" rel="stylesheet">
-    <style>
-      .book-containers {
-        background-color: white;
-        padding: 20px;
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        margin: 20px 0;
-        width: 80%;
-      }
-      .book-image {
-        max-width: 100%;
-        border-radius: 10px;
-      }
-      .book-title {
-        font-size: 1.2rem;
-        font-weight: bold;
-        margin-top: 10px;
-      }
-      .book-author {
-        color: #555;
-        margin-top: 5px;
-      }
-      .book-rating {
-        color: gold;
-        font-size: 1rem;
-        margin-top: 10px;
-      }
-      .book-description {
-        margin-top: 10px;
-      }
-      .book-description p {
-        margin: 0;
-      }
-      .book-price {
-        font-size: 1.2rem;
-        color: #d9534f;
-        margin-top: 10px;
-        text-align: right;
-      }
-      .book-details {
-        margin-top: 20px;
-        font-size: 0.9rem;
-      }
-      .btn-add-cart {
-        background-color: #91009D;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        border-radius: 10px;
-        margin-top: 10px;
-        display: block;
-        width: 70%;
-      }
-      .btn-add-cart:hover {
-        background-color: #7d1387;
-      }
-      .btn-review {
-        background-color: #91009D;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        border-radius: 10px;
-        margin-top: 10px;
-        display: block;
-        width: 25%;
-        text-align: center;
-      }
-      .text-muted {
-        color: #6c757d;
-      }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Actor&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-            <a class="navbar-brand" href="#">BookStore</a>
+            <a class="navbar-brand" href="Index.html">BookStore</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -107,112 +37,107 @@
                 </div>
                 <a href="register.html" class="btn btn-register my-2 my-sm-0 ml-2" type="button">Register</button>
                 <a href="register.html" class="btn btn-login my-2 my-sm-0 ml-2" type="button">Log In</button>
-                <a href="#" class="ml-2"><i class="fas fa-shopping-bag"></i></a>
+                <a href="carrito.html" class="ml-2"><i class="fas fa-shopping-bag"></i></a>
             </div>
         </nav>
     </header>
     <main>
-      <div class="container">
-        <div class="book-containers" id="book-containers">
-            <div class="row">
-                <div class="col-md-3">
-                    <img src="book-cover.jpg" alt="House of Flame and Shadow" class="book-image" id="book-image">
-                </div>
-                <div class="col-md-6">
-                    <div class="book-title" id="book-title">HOUSE OF FLAME AND SHADOW</div>
-                    <div class="book-author" id="book-author">Sarah J. Maas</div>
-                    <div class="book-rating" id="book-rating">★★★★★</div>
-                    <div class="book-description" id="book-description">
-                        <p>The stunning third book in the sexy, action-packed Crescent City series, following the global bestsellers House of Earth and Blood and House of Sky and Breath.</p>
-                        <p>Bryce Quinlan never expected to see a world other than Midgard, but now that she has, all she wants is to get back. Everything she loves is in Midgard: her family, her friends,</p>
-                        <a href="#" style="color: red;">Ver más</a>
+        <div class="container">
+            <div class="book-containers" id="book-containers">
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="" alt="Book Cover" class="book-image" id="book-image">
+                    </div>
+                    <div class="col-md-6">
+                        <div class="book-title" id="book-title"></div>
+                        <div class="book-author" id="book-author"></div>
+                        <div class="book-rating" id="book-rating"></div>
+                        <div class="book-description" id="book-description">
+                            <p id="book-description-text"></p>
+                            <a href="#" style="color: red;">Ver más</a>
+                        </div>
+                    </div>
+                    <div class="col-md-3 text-right">
+                        <div class="book-price" id="book-price"></div>
+                        <p class="book-iva">IVA Incluido</p>
+                        <button class="btn btn-add-cart mt-2" id="add-to-cart">Añadir a la cesta</button>
                     </div>
                 </div>
-                <div class="col-md-3 text-right">
-                    <div class="book-price" id="book-price">21.37 € <small class="text-muted">IVA incluido</small></div>
-                    <button class="btn btn-add-cart mt-2">Añadir a la cesta</button>
-                </div>
+                <div class="book-details mt-3" id="book-details"></div>
+                <button class="btn-review">Dejar mi opinión</button>
             </div>
-            <div class="book-details mt-3" id="book-details">
-                <p><strong>Editorial:</strong> BLOOMSBURY PUBLISHING LTD.</p>
-                <p><strong>Idioma:</strong> INGLÉS</p>
-                <p><strong>Encuadernado:</strong> Tapa blanda</p>
-                <p><strong>ISBN:</strong> 9781526628237</p>
-                <p><strong>Fecha de lanzamiento:</strong> 31/01/2024</p>
-            </div>
-            <button class="btn-review">Dejar mi opinion</button>
-        </div>
-        <div id="review-modal" class="modal" tabindex="-1" role="dialog">
-          <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <h5 class="modal-title">Dejar mi opinión</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                      </button>
-                  </div>
-                  <div class="modal-body">
-                      <div class="form-group">
-                          <label for="rating">Calificación:</label>
-                          <select id="rating" class="form-control">
-                              <option value="5">★★★★★ - 5</option>
-                              <option value="4">★★★★☆ - 4</option>
-                              <option value="3">★★★☆☆ - 3</option>
-                              <option value="2">★★☆☆☆ - 2</option>
-                              <option value="1">★☆☆☆☆ - 1</option>
-                          </select>
+            <div id="review-modal" class="modal" tabindex="-1" role="dialog">
+              <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                          <h5 class="modal-title">Dejar mi opinión</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                          </button>
                       </div>
-                      <div class="form-group">
-                          <label for="review">Comentario:</label>
-                          <textarea id="review" class="form-control" rows="3"></textarea>
+                      <div class="modal-body">
+                          <div class="form-group">
+                              <label for="rating">Calificación:</label>
+                              <select id="rating" class="form-control">
+                                  <option value="5">★★★★★ - 5</option>
+                                  <option value="4">★★★★☆ - 4</option>
+                                  <option value="3">★★★☆☆ - 3</option>
+                                  <option value="2">★★☆☆☆ - 2</option>
+                                  <option value="1">★☆☆☆☆ - 1</option>
+                              </select>
+                          </div>
+                          <div class="form-group">
+                              <label for="review">Comentario:</label>
+                              <textarea id="review" class="form-control" rows="3"></textarea>
+                          </div>
                       </div>
-                  </div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-primary" id="submit-review">Enviar</button>
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                      <div class="modal-footer">
+                          <button type="button" class="btn btn-primary" id="submit-review">Enviar</button>
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                      </div>
                   </div>
               </div>
-          </div>
-        </div>    </div>
-
+            </div>
+        </div>
     </main>
+
     <!--FOOTER-->
     <footer class="footer">
-      <div class="container">
-          <div class="row">
-              <div class="col-md-4" id="p">
-                  <h5 id="contacto">CONTACTO:</h5>
-                  <p>Tel: (+34) 657342895</p>
-                  <p>Email: lapaginamagica@gmail.com</p>
-                  <br>
-                  <h5>HORARIO DE APERTURA:</h5>
-                  <p>Lunes a Viernes: 9:00 AM - 7:00 PM</p>
-                  <p>Sábado y Domingo: 10:00 AM - 5:00 PM</p>
-              </div>
-              <div class="col-md-4">
-                  <h5>VISÍTANOS EN:</h5>
-                  <p>1234 Calle de los Libros</p>
-                  <p>Ciudad Literario, CP 56789</p>
-                  <p>País de las Maravillas</p>
-              </div>
-              <div class="col-md-4">
-                  <div class="col-md-12 text-center social-icons">
-                      <br>
-                      <br>
-                      <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png" alt="Instagram"></a>
-                      <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/twitter.png" alt="X"></a>
-                      <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/facebook-new.png" alt="Facebook"></a>
-                      <br>
-                      <br>
-                      <br>
-                      <br>
-                      <br>
-                      <br>
-                      <p>&copy; 2024 BookStore</p>
-                  </div>
-              </div>
-          </div>
-      </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4" id="p">
+                <h5 id="contacto">CONTACTO:</h5>
+                <p>Tel: (+34) 657342895</p>
+                <p>Email: lapaginamagica@gmail.com</p>
+                <br>
+                <h5>HORARIO DE APERTURA:</h5>
+                <p>Lunes a Viernes: 9:00 AM - 7:00 PM</p>
+                <p>Sábado y Domingo: 10:00 AM - 5:00 PM</p>
+            </div>
+            <div class="col-md-4">
+                <h5>VISÍTANOS EN:</h5>
+                <p>1234 Calle de los Libros</p>
+                <p>Ciudad Literario, CP 56789</p>
+                <p>País de las Maravillas</p>
+            </div>
+            <div class="col-md-4">
+                <div class="col-md-12 text-center social-icons">
+                    <br>
+                    <br>
+                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png" alt="Instagram"></a>
+                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/twitter.png" alt="X"></a>
+                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/facebook-new.png" alt="Facebook"></a>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <p>&copy; 2024 BookStore</p>
+                </div>
+            </div>
+        </div>
+    </div>
     </footer>
     <div class="back-to-top" id="back-to-top">
         <i class="fas fa-arrow-up"></i>
@@ -221,23 +146,94 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="/js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="js/books.js"></script>
+
     <script>
+        $(document).ready(function() {
+            const urls = new URLSearchParams(window.location.search);
+            const isbn = urls.get('isbn');
 
-    $(document).ready(function() {
+            const book = libros.find(libro => libro.isbn === isbn);
 
-        $(".btn-review").click(function() {
-            $("#review-modal").modal("show");
+            if (book) {
+                $('#book-title').text(book.title);
+                $('#book-author').text(book.author);
+                $('#book-rating').html(getStarsHTML(book.stars));
+                $('#book-price').text(`${book.price} €`);
+                $('#book-image').attr('src', book.image);
+                $('#book-image').attr('alt', book.title);
+                $('#book-description-text').text(book.description);
+
+                $('#book-details').html(`
+                    <br><br>
+                    <h4 style="font-family: 'Graguate', serif; font-size: 20px"><strong>FICHA TECNICA</strong></h4>
+                    <br>
+                    <p><strong>Editorial:</strong> ${book.editorial}</p>
+                    <p><strong>Idioma:</strong> ${book.language}</p>
+                    <p><strong>Encuadernado:</strong> ${book.binding}</p>
+                    <p><strong>ISBN:</strong> ${book.isbn}</p>
+                    <p><strong>Fecha de lanzamiento:</strong> ${book.releaseDate}</p>
+                `);
+            }
+
+            function getStarsHTML(stars) {
+                const fullStars = Math.floor(stars);
+                const halfStar = stars % 1 !== 0;
+                let starsHTML = '';
+
+                for (let i = 0; i < fullStars; i++) {
+                    starsHTML += '&#9733;'; // Full star
+                }
+                if (halfStar) {
+                    starsHTML += '&#189;'; // Half star
+                }
+                for (let i = fullStars + halfStar; i < 5; i++) {
+                    starsHTML += '&#9734;'; // Empty star
+                }
+                return starsHTML;
+            }
+
+            $(".btn-review").click(function() {
+                $("#review-modal").modal("show");
+            });
+
+            $("#submit-review").click(function() {
+                const rating = $("#rating").val();
+                const review = $("#review").val();
+                // Aquí puedes añadir código para manejar la revisión enviada, p. ej., guardarla en una base de datos o mostrarla en la página
+                alert(`Rating: ${rating}\nReview: ${review}`);
+                $("#review-modal").modal("hide");
+            });
         });
 
-        $("#submit-review").click(function() {
-            const rating = $("#rating").val();
-            const review = $("#review").val();
-            // Here you can add code to handle the submitted review, e.g., save it to a database or display it on the page
-            alert(`Rating: ${rating}\nReview: ${review}`);
-            $("#review-modal").modal("hide");
+        // Agrega un listener de evento al botón "Agregar al carrito"
+        document.getElementById('add-to-cart').addEventListener('click', function() {
+            // Aquí debes obtener la información del libro que quieres agregar al carrito
+            const bookTitle = document.getElementById('book-title').textContent;
+            const bookAuthor = document.getElementById('book-author').textContent;
+            const bookPrice = parseFloat(document.getElementById('book-price').textContent);
+            const bookImage = document.getElementById('book-image').src;
+
+            // Crea un objeto que represente el libro a agregar al carrito
+            const newItem = {
+                title: bookTitle,
+                author: bookAuthor,
+                price: bookPrice,
+                image: bookImage,
+                quantity: 1 // Puedes inicializar la cantidad en 1
+            };
+
+            // Llama a una función que agregue este artículo al carrito (debes definirla en tu script)
+            addToCart(newItem);
         });
-    });
+
+        // Función para agregar un artículo al carrito
+        function addToCart(item) {
+            // Aquí debes agregar la lógica para agregar el artículo al carrito (por ejemplo, a una lista en memoria)
+            // Luego, puedes actualizar la visualización del carrito, por ejemplo, mostrando una ventana emergente o redirigiendo al usuario a la página del carrito.
+            alert('¡Libro agregado al carrito!');
+        }
     </script>
 </body>
 </html>
